fixed uneven image size on portfolio page

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ nav a {
 
 .project-card img{
      max-width: 100%;
+     height: 150px;
 }
 
 .inner-card-link {
